# GroundStation

./: README.md
gui/: CMakeLists.txt  package.xml
gui/include/gui/: main_window.hpp  qnode.hpp
gui/mainui/: TabWidget.qml  frontPage.qml  mainui.qml
gui/src/: main.cpp  main_window.cpp  qnode.cpp
